warning cleanup